--- a/theme1/global.css
+++ b/theme1/global.css
@@ -115,9 +115,9 @@ z-index: 12;
 width: 100%;
 height: 100%;
 background-color: #000;
--moz-opacity: 0.7;
--webkit-opacity: 0.7;
-opacity: 0.7;
+-moz-opacity: 1;
+-webkit-opacity: 1;
+opacity: 1;
 position: absolute;
 top: 0;
 left: 0;
@@ -418,6 +418,12 @@ padding: 0 0 0 170px;
 min-width: 830px;
 min-height: 100%;
 overflow: hidden;
+-webkit-transition: color 1s;
+-moz-transition: color 1s;
+-ms-transition: color 1s;
+-o-transition: color 1s;
+transition: background 1s;
+background-color: rgb(5,5,5);
 z-index: 1;
 position: relative;
 }
@@ -426,8 +432,8 @@ position: relative;
 float: left;
 margin: 0;
 padding: 0;
+height: 100vh;
 width: 100%;
-height: auto;
 clear: both;
 overflow: hidden;
 position: relative;
@@ -516,13 +522,18 @@ height: 100%;
 
 .image{
 float: none;
-width: 100%;
+max-width: 95%;
+max-height: 95vh;
 height: auto;
+width: auto;
 visibility: hidden;
 position: absolute;
-top: 0;
-left: 0;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
 z-index: 1;
+border: 8px solid black;
+border-radius: 3px;
 }
 
 .image.active{
